GitHub Actions exploration -multilang redirection

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -7,10 +7,13 @@ body {
 }
 
 a {
-    transition: all 0.5s;
-    color: #ffc;
+    transition: all 0.1s;
+    color: #cca;
+    padding-right: 4px;
+    padding-left: 4px;
 }
 
 a:hover {
-    color: blanchedalmond;
+    color: #ffc;
+    background-color: #664;
 }
